--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://tanishqawasthi.github.io/gdocs-frontend-clone",
   "name": "google-docs-clone",
   "version": "0.1.0",
   "private": true,
@@ -12,10 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
-    "craco": "^0.0.3",
     "draft-js": "^0.11.7",
-    "draftjs-to-html": "^0.9.1",
-    "html-to-draftjs": "^1.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -26,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":  "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0",
-    "tailwindcss": "^3.3.2"
+    "gh-pages": "^5.0.0"
   }
 }
